Fix jumping active button, firefox.

--- a/source/sass/blocks/reviews.scss
+++ b/source/sass/blocks/reviews.scss
@@ -70,6 +70,8 @@
 
 .reviews__button {
   width: 130px;
+  margin: 0;
+  padding: 0;
   height: 52px;
   background-color: transparent;
   background-position: center;
